--- a/function-library/pom.xml
+++ b/function-library/pom.xml
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>com.clearspring.analytics</groupId>
             <artifactId>stream</artifactId>
-            <version>2.8.0</version>
+            <version>${clearspring.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
