--- a/serialisation-library/pom.xml
+++ b/serialisation-library/pom.xml
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>com.clearspring.analytics</groupId>
             <artifactId>stream</artifactId>
-            <version>2.8.0</version>
+            <version>${clearspring.version}</version>
         </dependency>
         <dependency>
             <groupId>gaffer</groupId>
